# RagChatbot_backend

./: .env  main.py  pyproject.toml  requirements.txt
backend/: api.py  build_index.py
data/text_files/: Tc_Extension.txt  about_anmol.txt  cal_agent.txt  career_goals.txt  certifications.txt  education.txt  faq_about_anmol.txt  faq_dataset.txt  hackathons_and_events.txt  interests.txt  opportunities.txt  persona_profile.txt  personal_story.txt  portfolio_faq.txt  portfolio_website.txt  projects_overview.txt  rag_chatbot.txt  social_impact.txt  strengths.txt  technical_skills.txt
faiss_store/: faiss.index  metadata.pkl
src/: dataLoader.py  embedding.py  search.py  vectorstore.py
src/faiss_store/: faiss.index  metadata.pkl
