[project]
name = "askme-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.5",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
